fix arrow alignment

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -153,8 +153,7 @@
 .arrows {
   width: 60px;
   height: 80px;
-  margin-left: 48%;
-  margin-top: 2%;
+  margin-left: 46%;
 }
 
 .arrows path {
